

// Player Animation Parameters
public static class PAP
{
    public static string moveX = "moveX";
    public static string isMoving = "isMoving";
    public static string forceX = "forceX";
    public static string impulseY = "impulseY";
    public static string isOnGround = "isOnGround";
    public static string landedOnGround = "landedOnGround";
    public static string velocityY = "velocityY";
    public static string jumpTriggerName = "jump";
    public static string hasDoubleJummped = "hasDoubleJummped";
}